--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,41 +1,34 @@
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Formulaire de Connexion</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="login.component.css">
+</head>
+
 <body>
-    <div class="container h-100">
-        <div class="row h-100 justify-content-center align-items-center">
+    <div class="container rounded-container">
+        <div class="row justify-content-center">
             <div class="col-md-6">
-                <form class="form-signin p-5 rounded" (ngSubmit)="onSubmit()" style="background-color: #B0C4DE; margin-top: 50px;">
-                    <h1 class="h3 mb-3 font-weight-normal">Portail administrateur</h1>
-                    <div class="row form-group">
-                        <div class="col-md-3">
-                            <label for="inputEmail">Identifiant :</label>
-                        </div>
-                        <div class="col-md-9">
-                            <input type="email" name="email" id="email" [(ngModel)]="email" class="form-control">
-                        </div>
+                <h2 class="text-center mb-4">Connexion administrateur</h2>
+                <form (ngSubmit)="onSubmit()">
+                    <div class="form-group">
+                        <label for="login">Nom d'utilisateur</label>
+                        <input name="login" type="text" class="form-control" [(ngModel)]="email" placeholder="Entrez votre nom d'utilisateur">
                     </div>
-                    <div class="row form-group">
-                        <div class="col-md-3">
-                            <label for="inputPassword">Mot de passe :</label>
-                        </div>
-                        <div class="col-md-9">
-                            <input type="password" name="password" id="password" [(ngModel)]="password" class="form-control">
-                        </div>
+                    <div class="form-group">
+                        <label for="password">Mot de passe</label>
+                        <input name="password" type="password" class="form-control" [(ngModel)]="password" placeholder="Entrez votre mot de passe">
                     </div>
-                    <div class="text-center">
-                        <button mat-raised-button color="accent" style="margin-top: 20px;" type="submit">Connexion</button>
-                    </div>
+                    <button type="submit" class="btn btn-primary">Se connecter</button>
                 </form>
             </div>
         </div>
     </div>
-
-    <div class="container h-100" style="margin-top : 20px">
-        <div class="row h-100 justify-content-center align-items-center">
-
-            <footer class="col-md-6 text-center">
-                <div *ngIf="alert" id="divErreur" class="alert alert-primary" role="alert">
-                    <p id="erreur" name="errorMessage"> {{ errorMessage }}</p>
-                </div>
-            </footer>
-        </div>
-    </div>
 </body>
+
+<footer class="col-md-6 text-center">
+    <div *ngIf="alert" id="divErreur" class="alert alert-danger" role="alert">
+        <p id="erreur" name="errorMessage"> {{ errorMessage }}</p>
+    </div>
+</footer>
