--- a/frontend/src/app/accueil/accueil.component.html
+++ b/frontend/src/app/accueil/accueil.component.html
@@ -21,3 +21,9 @@
         <button class="button" (click)="submit()">Suivant</button>
     </div>
 </div>
+
+<footer class="col-md-6 text-center">
+    <div *ngIf="alert" id="divErreur" class="alert alert-danger" role="alert">
+        <p id="erreur" name="errorMessage"> {{ errorMessage }}</p>
+    </div>
+</footer>
