:sparkles: accueil 1 fini + ajout accueil 2

--- a/frontend/src/app/accueil/accueil.component.css
+++ b/frontend/src/app/accueil/accueil.component.css
@@ -41,3 +41,10 @@
 .button {
     margin-top: 50px;
 }
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 100px auto;
+}
