--- a/frontend/src/app/accueil2/accueil2.component.html
+++ b/frontend/src/app/accueil2/accueil2.component.html
@@ -1,1 +1,28 @@
-<p>accueil2 works!</p>
+<div class="container">
+    <h1> Sélectionner le style de votre frise </h1>
+    <form>
+        <h2>Sélectionner une couleur :</h2>
+        <input type="radio" name="couleur" value="blue" [(ngModel)]="couleur"> Bleu<br>
+        <input type="radio" name="couleur" value="red" [(ngModel)]="couleur"> Rouge<br>
+        <input type="radio" name="couleur" value="green" [(ngModel)]="couleur"> Vert<br>
+        <input type="radio" name="couleur" value="black" [(ngModel)]="couleur"> Noir<br>
+        <input type="radio" name="couleur" value="personnalise" (change)="toggleSelection()"> Personnalisé<br>
+
+        <div id="couleur-personnalise" *ngIf="selectionPersonnalisee" class="couleur-personnalise-container">
+            <input type="color" name="couleur-personnalise" [(ngModel)]="couleurPersonnalise" class="couleur-personnalise-input">
+            <button (click)="validerCouleur()" class="couleur-personnalise-button">OK</button>
+        </div>
+
+        <h2>Sélectionner la forme :</h2>
+        <input type="radio" name="forme" value="horizontale" [(ngModel)]="forme"> Horizontale<br>
+        <input type="radio" name="forme" value="verticale" [(ngModel)]="forme"> Verticale<br>
+
+        <button type="submit" (click)="submit()">Générer la Frise Historique</button>
+    </form>
+
+</div>
+<footer class="col-md-6 text-center">
+    <div *ngIf="alert" id="divErreur" class="alert alert-danger" role="alert">
+        <p id="erreur" name="errorMessage"> {{ errorMessage }}</p>
+    </div>
+</footer>
