--- a/frontend/src/app/accueil/accueil.component.css
+++ b/frontend/src/app/accueil/accueil.component.css
@@ -7,6 +7,11 @@
     font-size: 24px;
     margin-bottom: 50px;
     margin-top: 50px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border: 1px solid black;
+    /* Ajouter une bordure de 1 pixel solide de couleur noire */
+    border-radius: 5px;
 }
 
 .subtitle {
@@ -40,6 +45,7 @@
 
 .button {
     margin-top: 50px;
+    border-radius: 5px;
 }
 
 footer {
