--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -13,6 +13,10 @@ body {
     margin: 0 auto;
 }
 
+.form-group {
+    margin-bottom: 15px;
+}
+
 footer {
     display: flex;
     justify-content: center;
