--- a/frontend/src/app/page-frise/page-frise.component.css
+++ b/frontend/src/app/page-frise/page-frise.component.css
@@ -1,35 +1,19 @@
-/* Styles pour le bouton Home */
-
 .home-button {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    padding: 5px 10px;
+    margin-top: 20px;
 }
 
 
 /* Styles pour la liste de choix de format de téléchargement */
 
 .download-format {
+    width: 100%;
     margin-top: 20px;
     text-align: right;
 }
 
-
-/* Styles pour le bouton Exporter la frise */
-
-.export-button {
-    margin-top: 20px;
-    padding: 10px 20px;
-    background-color: #337ab7;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.export-button:hover {
-    background-color: #286090;
+#top {
+    display: flex;
+    flex-direction: row;
 }
 
 
@@ -53,19 +37,6 @@
 
 /* Styles pour les boutons Changer les catégories, Changer le style de la frise et Envoyer une suggestion pour une modification */
 
-.button-container button {
-    padding: 10px 20px;
-    background-color: #337ab7;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.button-container button:hover {
-    background-color: #286090;
-}
-
 .infographic {
     margin-top: 20%;
     margin-bottom: 20%;
@@ -83,4 +54,12 @@ line.timeline {
 
 circle.dot {
     fill: #D4F6F0;
+}
+
+button {
+    margin: 5px;
+}
+
+mat-form-field {
+    width: 100px;
 }
