:bug: correction bug fonction ignorer admin/submission

--- a/frontend/src/app/page-admin/page-admin.component.css
+++ b/frontend/src/app/page-admin/page-admin.component.css
@@ -22,7 +22,7 @@ button {
 
 .buttonEvent {
     display: block;
-    margin: 0 auto;
+    margin: 10px auto;
     /* Centrer le bouton horizontalement */
     margin-bottom: 20px;
     /* Ajouter une marge inférieure pour éviter le chevauchement */
