--- a/frontend/src/app/page-admin/page-admin.component.html
+++ b/frontend/src/app/page-admin/page-admin.component.html
@@ -1,26 +1,27 @@
-<div class="header">
-    <button (click)="logout()" class="btn btn-primary">Déconnexion</button>
-</div>
-
-<div class="sidebar">
-    <h3>Liste de suggestions</h3>
-    <div *ngFor="let suggestion of suggestions" class="suggestion">
-        <input type="checkbox" [(ngModel)]="suggestion.selected">
-        <span>{{suggestion.dateSub}} {{suggestion.type}} {{suggestion.title}} {{suggestion.date}} {{suggestion.description}} </span>
+<div class="container">
+    <div class="header">
+        <button mat-raised-button color="primary" (click)="logout()" class="btn btn-primary">Déconnexion</button>
     </div>
+    <mat-accordion>
+        <mat-expansion-panel *ngFor="let suggestion of suggestions" hideToggle [ngClass]="getBackgroundColor(suggestion.type)">
+            <mat-expansion-panel-header>
+                <mat-checkbox [(ngModel)]="suggestion.selected"></mat-checkbox>
+                <mat-panel-title>
+                    {{suggestion.dateSub}} - {{suggestion.type}}
+                </mat-panel-title>
+                <mat-panel-description>
+                    {{suggestion.date}} - {{suggestion.title}}
+                </mat-panel-description>
+            </mat-expansion-panel-header>
+            <p>{{suggestion.description}}</p>
+        </mat-expansion-panel>
+    </mat-accordion>
+    <button mat-raised-button color="primary" (click)="validate()" id="valider">Valider</button>
+    <button mat-raised-button color="warn" (click)="ignore()" id="ignorer">Ignorer</button>
+    <button mat-raised-button (click)="manageHistoricalEvents()" class="buttonEvent">Gérer les événements historiques</button>
+    <footer class="col-md-6 text-center">
+        <div *ngIf="alert" id="divErreur" class="alert alert-danger" role="alert">
+            <p id="erreur" name="errorMessage"> {{ errorMessage }}</p>
+        </div>
+    </footer>
 </div>
-
-<div class="content">
-    <div class="buttons">
-        <button (click)="validate()" id="valider">Valider</button>
-        <button (click)="ignore()" id="ignorer">Ignorer</button>
-
-    </div>
-
-</div>
-<button (click)="manageHistoricalEvents()" class="buttonEvent">Gérer les événements historiques</button>
-<footer class="col-md-6 text-center">
-    <div *ngIf="alert" id="divErreur" class="alert alert-danger" role="alert">
-        <p id="erreur" name="errorMessage"> {{ errorMessage }}</p>
-    </div>
-</footer>
