--- a/frontend/src/app/accueil/accueil.component.css
+++ b/frontend/src/app/accueil/accueil.component.css
@@ -1,56 +1,24 @@
-.container {
+mat-card {
+    margin: auto;
+    margin-top: 50px;
     text-align: center;
     padding: 20px;
+    max-width: 70%;
 }
 
-.title {
-    font-size: 24px;
-    margin-bottom: 50px;
-    margin-top: 50px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    border: 1px solid black;
-    /* Ajouter une bordure de 1 pixel solide de couleur noire */
-    border-radius: 5px;
+mat-slider {
+    margin-top: 40px;
+    width: 95%;
 }
 
-.subtitle {
-    font-size: 18px;
-    margin-bottom: 10px;
+h2 {
+    margin-top: 50px
 }
 
-.category {
-    margin-bottom: 10px;
-}
-
-.period {
-    margin-bottom: 50px;
-}
-
-.slider {
-    width: 300px;
-}
-
-.year {
-    font-size: 18px;
-    margin-top: 10px;
-}
-
-.categories {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-gap: 20px;
-    margin-bottom: 50px;
-}
-
-.button {
-    margin-top: 50px;
-    border-radius: 5px;
-}
-
-footer {
-    display: flex;
-    justify-content: center;
+mat-card-actions {
     align-items: center;
-    margin: 100px auto;
+}
+
+button {
+    margin-top: 20px;
 }
