--- a/frontend/src/app/update/update.component.html
+++ b/frontend/src/app/update/update.component.html
@@ -1,40 +1,67 @@
-<!-- app.component.html -->
-<header>
-    <button (click)="home()" class="button button-home">Home</button>
-    <button (click)="logout()" class="btn btn-primary">Déconnexion</button>
-</header>
-
-<main>
-    <div class="search-bar">
-        <input type="text" placeholder="Rechercher..." />
+<div class="container">
+    <div class="header">
+        <button mat-raised-button color="primary" class="button" (click)="home()" class="button button-home">Home</button>
+        <button mat-raised-button color="primary" class="button" (click)="logout()" class="btn btn-primary">Déconnexion</button>
     </div>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Catégorie</th>
-                <th>Date</th>
-                <th>Titre</th>
-                <th>Description</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let event of events">
-                <td>{{ event.categorie}}</td>
-                <td>{{ event.date }}</td>
-                <td>{{ event.titre }}</td>
-                <td>{{ event.description}}</td>
-                <td>
-                    <button class="button button-edit" (click)="editEvent(event)">Modifier</button>
-                    <button class="button button-delete" (click)="deleteEvent(event)">Supprimer</button>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="6">
-                    <button class="button button-add" (click)="addEvent()">+</button>
-                </td>
-            </tr>
-        </tbody>
+
+    <div>
+        <mat-form-field>
+            <mat-label>search</mat-label>
+            <input matInput placeholder="search" #input>
+            <button class="buttonSearch" mat-raised-button matSuffix (click)="search()">
+              search
+            </button>
+        </mat-form-field>
+
+        <button class="button2" mat-raised-button (click)="addEvent()">
+        Ajouter un évenement
+      </button>
+    </div>
+    <table mat-table [dataSource]="events" class="mat-elevation-z8">
+
+        <!-- Position Column -->
+        <ng-container matColumnDef="category">
+            <th mat-header-cell *matHeaderCellDef> Catégorie </th>
+            <td mat-cell *matCellDef="let element"> {{element.category}} </td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef> Date </th>
+            <td mat-cell *matCellDef="let element"> {{element.date.toLocaleDateString()}} </td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="title">
+            <th mat-header-cell *matHeaderCellDef> Titre </th>
+            <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef> Description </th>
+            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef> &nbsp; </th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button [matMenuTriggerFor]="menu"><mat-icon>more_vert</mat-icon></button>
+                <mat-menu #menu="matMenu">
+                    <button mat-menu-item (click)="editEvent(element)"><mat-icon>edit</mat-icon>Modifier</button>
+                    <button mat-menu-item (click)="deleteEvent(element)"><mat-icon>delete</mat-icon>Supprimer</button>
+                </mat-menu>
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+        </tr>
     </table>
-</main>
+
+</div>
