--- a/frontend/src/app/popup-add-event/popup-add-event.component.html
+++ b/frontend/src/app/popup-add-event/popup-add-event.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Change Date</h1>
+<h1 mat-dialog-title>Ajouter un évènement</h1>
 <div mat-dialog-content>
     <form #form="ngForm">
         <mat-label>Catégories</mat-label>
