update and create event admin

--- a/frontend/src/app/update/update.component.html
+++ b/frontend/src/app/update/update.component.html
@@ -23,7 +23,7 @@
         <!-- Position Column -->
         <ng-container matColumnDef="category">
             <th mat-header-cell *matHeaderCellDef> Catégorie </th>
-            <td mat-cell *matCellDef="let element"> {{element.categories}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.categorieName}} </td>
         </ng-container>
 
         <!-- Name Column -->
