--- a/frontend/src/app/popup-modify-event-admin/popup-modify-event-admin.component.html
+++ b/frontend/src/app/popup-modify-event-admin/popup-modify-event-admin.component.html
@@ -1,1 +1,31 @@
-<p>popup-modify-event-admin works!</p>
+<h1 mat-dialog-title>Ajouter un évènement</h1>
+<div mat-dialog-content>
+  <form #form="ngForm">
+    <mat-label>Catégories</mat-label>
+    <div class="checkbox-wrapper">
+      <div *ngFor="let category of categories" class="category">
+        <mat-checkbox [(ngModel)]="category.selected" [ngModelOptions]="{standalone: true}">{{ category.name }}</mat-checkbox>
+      </div>
+    </div>
+    <mat-form-field>
+      <mat-label>title</mat-label>
+      <input name="title" matInput [(ngModel)]="title">
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Choose a date</mat-label>
+      <input name="date" matInput [matDatepicker]="picker" [(ngModel)]="date">
+      <mat-hint>MM/DD/YYYY</mat-hint>
+      <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+
+    <mat-form-field id="textarea">
+      <mat-label>Textarea</mat-label>
+      <textarea name="description" matInput [(ngModel)]="description"></textarea>
+    </mat-form-field>
+  </form>
+</div>
+<div mat-dialog-actions>
+  <button mat-button mat-dialog-close color="primary" (click)="submitData()">Ajouter</button>
+  <button mat-button mat-dialog-close>Annuler</button>
+</div>
