maj du 2 janvier

--- a/frontend/src/app/accueil/accueil.component.html
+++ b/frontend/src/app/accueil/accueil.component.html
@@ -4,6 +4,7 @@
 <div id="top">
     <button mat-raised-button color="primary" routerLink="/" class="home-button">Deconnexion</button>
     <button mat-raised-button color="primary" routerLink="/friseparam1" class="home-button">Générer frise chronologique</button>
+    <button mat-raised-button color="primary" routerLink="/submission" class="home-button">Gérer les soumissions</button>
 </div>
 <div class="onglet">
     <div>
@@ -17,9 +18,6 @@
         <a routerLink="/personnalites">Personnalités</a>
         <a routerLink="/generationsinformatique">Générations Informatiques</a>
         <a routerLink="/domaines">Domaines</a> 
-       <!-- <a routerLink="/">Logiciel</a>
-        <a routerLink="/">Matériel</a>-->
-       <!-- <a routerLink="/">Internet</a>-->
         <a routerLink="/programmes">Langages de Programmation</a> <!-- Programmes-->
     </div>
  </div>
