--- a/frontend/src/app/generationinformatique/generationinformatique.component.html
+++ b/frontend/src/app/generationinformatique/generationinformatique.component.html
@@ -17,7 +17,7 @@
         <td>{{ geninfo.id }}</td>
         <td>{{ geninfo.annee_debut }}</td>
         <td>{{ geninfo.annee_fin }}</td>
-        <td>{{ geninfo.nom_generation }}</td>
+        <td>{{ geninfo.nom }}</td>
         <td>{{ geninfo.description }}</td>
       </tr>
     </tbody>
