--- a/frontend/src/app/evenementsinformatiques/evenementsinformatiques.component.html
+++ b/frontend/src/app/evenementsinformatiques/evenementsinformatiques.component.html
@@ -6,6 +6,7 @@
     <thead>
       <tr>
         <th>ID</th>
+        <th>Nom</th>
         <th>Année</th>
         <th>Evenements</th>
       </tr>
@@ -13,6 +14,7 @@
     <tbody>
       <tr *ngFor="let evenementsinfo of evenementsinfoData" class="table-row">
         <td>{{ evenementsinfo.id }}</td>
+        <td>{{ evenementsinfo.nom }}</td>
         <td>{{ evenementsinfo.annee }}</td>
         <td>{{ evenementsinfo.evenement }}</td>
       </tr>
