--- a/frontend/src/app/page-frise/page-frise.component.css
+++ b/frontend/src/app/page-frise/page-frise.component.css
@@ -1,8 +1,12 @@
+
+
+
+/*------------------------------*/
 .home-button {
     margin-top: 20px;
 }
 
-
+  
 /* Styles pour la liste de choix de format de téléchargement */
 
 .download-format {
