--- a/frontend/src/app/page-frise/page-frise.component.html
+++ b/frontend/src/app/page-frise/page-frise.component.html
@@ -1,3 +1,4 @@
+<script src="https://d3js.org/d3.v7.min.js"></script>
 <div id="top">
     <button mat-raised-button color="primary" routerLink="/" class="home-button">Deconnexion</button>
     <button mat-raised-button color="primary" routerLink="/accueil" class="home-button">Accueil</button>
@@ -27,5 +28,4 @@
 </div>
 
 <!-- Frise générée -->
-<div id="timeline">
-</div>
+<div #friseContainer class="frise-container my-custom-frise"></div>
