--- a/frontend/src/app/page-frise/page-frise.component.html
+++ b/frontend/src/app/page-frise/page-frise.component.html
@@ -1,6 +1,6 @@
 <script src="https://d3js.org/d3.v7.min.js"></script>
 <div id="top">
-    <button mat-raised-button color="primary" routerLink="/" class="home-button">Deconnexion</button>
+    <button mat-raised-button color="primary" (click)="logout()" class="home-button">Déconnexion</button>
     <button mat-raised-button color="primary" routerLink="/accueil" class="home-button">Accueil</button>
     <div class="download-format">
 
